<resources>
    <string name="app_name">Reaction</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_finish_game">FinishGame</string>
    <string name="your_score">YOUR SCORE</string>
    <string name="start_new_game">Start new game</string>
    <string name="title_activity_choose_difficult">ChooseDifficult</string>
    <string name="choose_difficult">CHOOSE DIFFICULT</string>
    <string name="baby_dif">BABY</string>
    <string name="easy_dif">EASY</string>
    <string name="med_dif">MEDIUM</string>
    <string name="hard_dif">HARD</string>
    <string name="hardcore_dif">! HARDCORE !</string>
    <string name="tap_to_share">TAP TO SHARE</string>
</resources>
