<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_share"
        android:id="@+id/share"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:textSize="38sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:textStyle="normal"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/score"
        android:text=""
        android:textStyle="normal"
        android:textSize="40sp"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_new_game"
            android:id="@+id/start_new_game"
            android:layout_gravity="center"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>
